# persona-introspect

./: ARCHITECTURE.md  Cargo.toml  flake.nix
src/: command.rs  daemon.rs  error.rs  lib.rs  runtime.rs  supervision.rs
tests/: actor_discipline_truth.rs  daemon.rs
